////apply plugin: 'java'
//plugins {
//    id 'java'
//    id 'org.openjfx.javafxplugin' version '0.0.8'
//}
////apply plugin: 'junit-platform-gradle-plugin'
//sourceCompatibility = 8
//targetCompatibility = 8
//
//// Versioning of dependencies
//wrapper.gradleVersion = '5.6.2'
//
//javafx {
//    version = "8"
//    modules = [ 'javafx.controls' ]
//}
//
//repositories {
//    jcenter()
//    mavenCentral()
//}
//
//dependencies {
//    testImplementation "io.cucumber:cucumber-java:4.7.2"
//    testImplementation "io.cucumber:cucumber-junit:4.7.2"
//    testImplementation "org.junit.jupiter:junit-jupiter-api:5.5.0"
//
//    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.5.0"
//    testRuntimeOnly "org.junit.vintage:junit-vintage-engine:5.5.0"
//}
//
//test {
//    useJUnitPlatform()
//}

buildscript {
    dependencies {
        classpath group: 'de.dynamicfiles.projects.gradle.plugins', name: 'javafx-gradle-plugin', version: '8.8.2'

    }
    repositories {
        mavenLocal()
        mavenCentral()

    }
}
apply plugin: 'java'

sourceCompatibility = 8
targetCompatibility = 8

repositories {
    mavenLocal()
    mavenCentral()
}


dependencies {
    testImplementation "io.cucumber:cucumber-java:4.7.2"
    testImplementation "io.cucumber:cucumber-junit:4.7.2"
    testImplementation "org.junit.jupiter:junit-jupiter-api:5.5.0"

    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.5.0"
    testRuntimeOnly "org.junit.vintage:junit-vintage-engine:5.5.0"
}

test {
    useJUnitPlatform()
}

apply plugin: 'javafx-gradle-plugin'

jfx {
    // minimal requirement for jfxJar-task
    mainClass = 'ca.mcgill.ecse223.quoridor.QuoridorApplication'

    // minimal requirement for jfxNative-task
    vendor = 'YourName'
}